Fixed footer bug in android 2.3

--- a/package/stylesheets/TaKo.css
+++ b/package/stylesheets/TaKo.css
@@ -26,7 +26,7 @@ div[data-element="aside_background"].show{background-color:#000;opacity:.6;z-ind
 .progress_bar .percent{height:inherit;display:block;-webkit-transition-duration:500ms;-moz-transition-duration:500ms;-ms-transition-duration:500ms;-o-transition-duration:500ms;transition-duration:500ms}
 .clear:after{display:block;content:"";clear:both}
 
-section{height:inherit;width:inherit;position:absolute;margin:0;z-index:0;top:0;left:0;bottom:0;opacity:0;-webkit-transition-duration:300ms;-moz-transition-duration:300ms;-ms-transition-duration:300ms;-o-transition-duration:300ms;transition-duration:300ms;}
+section{height:inherit;width:inherit;position:absolute;margin:0;padding:0;z-index:0;top:0;left:0;bottom:0;opacity:0;-webkit-transition-duration:300ms;-moz-transition-duration:300ms;-ms-transition-duration:300ms;-o-transition-duration:300ms;transition-duration:300ms;}
 section.active{opacity:1;z-index:100}
 section:not(.active) > article{display:none}
 section.footer > article{padding-bottom:65px}
@@ -37,12 +37,12 @@ header > nav.right{right:0;}
 header > nav.right > button{margin-right:5px}
 header > nav.left{left:0;}
 header > nav.left > button{margin-left:5px}
-footer{position:fixed;bottom:0;left:0;right:0;width:100%;height:65px;line-height:65px;display:-webkit-box;display:-ms-box;display:-moz-box;display:-o-box;display:box;-webkit-box-orient:horizontal;-moz-box-orient:horizontal;-ms-box-orient:horizontal;-o-box-orient:horizontal;box-orient:horizontal;-webkit-box-direction:normal;-moz-box-direction:normal;-ms-box-direction:normal;-o-box-direction:normal;box-direction:normal;-webkit-box-pack:justify;-moz-box-pack:justify;-ms-box-pack:justify;-o-box-pack:justify;box-pack:justify;-webkit-box-align:stretch;-moz-box-align:stretch;-ms-box-align:stretch;-o-box-align:stretch;box-align:stretch;}
-footer nav{-webkit-box-flex:1;-moz-box-flex:1;-ms-box-flex:1;-o-box-flex:1;box-flex:1;height:65px;line-height:65px;padding:0;display:-webkit-box;display:-ms-box;display:-moz-box;display:-o-box;display:box;width:100%;-webkit-box-orient:horizontal;-moz-box-orient:horizontal;-ms-box-orient:horizontal;-o-box-orient:horizontal;box-orient:horizontal;-webkit-box-direction:normal;-moz-box-direction:normal;-ms-box-direction:normal;-o-box-direction:normal;box-direction:normal;-webkit-box-pack:justify;-moz-box-pack:justify;-ms-box-pack:justify;-o-box-pack:justify;box-pack:justify;-webkit-box-align:stretch;-moz-box-align:stretch;-ms-box-align:stretch;-o-box-align:stretch;box-align:stretch;}
+footer{position:fixed;bottom:0;left:0;right:0;margin:0 0 -2px 0;width:100%;height:65px;line-height:65px;display:-webkit-box;display:-ms-box;display:-moz-box;display:-o-box;display:box;-webkit-box-orient:horizontal;-moz-box-orient:horizontal;-ms-box-orient:horizontal;-o-box-orient:horizontal;box-orient:horizontal;-webkit-box-direction:normal;-moz-box-direction:normal;-ms-box-direction:normal;-o-box-direction:normal;box-direction:normal;-webkit-box-pack:justify;-moz-box-pack:justify;-ms-box-pack:justify;-o-box-pack:justify;box-pack:justify;-webkit-box-align:stretch;-moz-box-align:stretch;-ms-box-align:stretch;-o-box-align:stretch;box-align:stretch;}
+footer nav{margin:0;-webkit-box-flex:1;-moz-box-flex:1;-ms-box-flex:1;-o-box-flex:1;box-flex:1;height:65px;line-height:65px;padding:0;display:-webkit-box;display:-ms-box;display:-moz-box;display:-o-box;display:box;width:100%;-webkit-box-orient:horizontal;-moz-box-orient:horizontal;-ms-box-orient:horizontal;-o-box-orient:horizontal;box-orient:horizontal;-webkit-box-direction:normal;-moz-box-direction:normal;-ms-box-direction:normal;-o-box-direction:normal;box-direction:normal;-webkit-box-pack:justify;-moz-box-pack:justify;-ms-box-pack:justify;-o-box-pack:justify;box-pack:justify;-webkit-box-align:stretch;-moz-box-align:stretch;-ms-box-align:stretch;-o-box-align:stretch;box-align:stretch;}
 footer nav > *{-webkit-box-flex:1;-moz-box-flex:1;-ms-box-flex:1;-o-box-flex:1;box-flex:1;text-align:center;width:100%;display:block;height:65px;}
 footer nav > * > *{line-height:65px;height:65px}
 footer nav > *.active{background-color:rgba(250,250,250,0.15)}
-article{min-width:100%;width:auto;display:none;padding-top:5px;position:absolute;top:50px;}
+article{min-width:100%;width:auto;display:none;padding-top:5px;margin:0;position:absolute;top:50px;}
 article.active{display:block}
 
 article ul{list-style:none;width:100%;padding:0;margin-left:0;margin-right:0;}
