--- a/stylesheets/TaKo.section.styl
+++ b/stylesheets/TaKo.section.styl
@@ -3,6 +3,7 @@ section
   width inherit
   position absolute
   margin 0
+  padding 0
   z-index 0
   top 0
   left 0
@@ -62,6 +63,7 @@ footer
   bottom 0
   left 0
   right 0
+  margin 0 0 -2px 0
   width 100%
   height FOOTER_HEIGHT
   line-height FOOTER_HEIGHT
@@ -78,6 +80,7 @@ footer
   box-align stretch
 
   & nav
+    margin 0
     box-flex 1
     height FOOTER_HEIGHT
     line-height FOOTER_HEIGHT
@@ -113,6 +116,7 @@ article
   width auto
   display none
   padding-top 5px
+  margin 0
   position absolute
   top HEADER_HEIGHT
 
