Fixed input blur bug

--- a/stylesheets/TaKo.constants.styl
+++ b/stylesheets/TaKo.constants.styl
@@ -46,8 +46,10 @@ COLUMN                          = 10%
 // BUTTON_HEIGHT                = 34px
 
 /* Z-INDEXES */
+ARTICLE_INDEX                   = 99
 SECTION_INDEX                   = 100
 HEADER_INDEX                    = 101
+FOOTER_INDEX                    = 101
 HEADER_H1_INDEX                 = 102
 HEADER_NAV_INDEX                = 103
 
