--- a/stylesheets/TaKo.base.styl
+++ b/stylesheets/TaKo.base.styl
@@ -1,4 +1,6 @@
 body
+  padding 0
+  margin 0
   width 100%
   height 100%
   -webkit-touch-callout none
@@ -7,6 +9,9 @@ body
   -moz-user-select none
   -ms-user-select none
   user-select none
+  oveflow hidden
+
+  -webkit-backface-visibility hidden
 
 aside
   display block
