--- a/stylesheets/TaKo.notifications.styl
+++ b/stylesheets/TaKo.notifications.styl
@@ -8,20 +8,17 @@ div[data-element="notification"]
   background-color rgba(0,0,0,0.6)
   z-index NOTIFICATION_INDEX
   padding-top 0
-  padding-left NOTIFICATION_INDENT
-  padding-right NOTIFICATION_INDENT
 
   &.show
     display block
 
   & > div.window
     color rgba(0, 0, 0, 0.8)
-    padding INDENT
     margin-left auto
     margin-right auto
     opacity 0
     max-width 450px
-    width 80%
+    width 90%
     transition-duration NOTIFICATION_TRANSITION_TIME
 
     &:after
@@ -91,6 +88,7 @@ div[data-element="notification"]
     &.success, &.error
       border-style solid
       border-width 0 0 0 4px
+      min-width 280px
 
       & .title
         padding-top 0.3em
