--- a/stylesheets/TaKo.base.styl
+++ b/stylesheets/TaKo.base.styl
@@ -75,6 +75,23 @@ div[data-element="aside_background"]
 .onright
   float right
 
+.clear:after
+  display block
+  content ""
+  clear both
+
+.middle
+  vertical-align middle
+
+.block
+  display block!important
+
+.inline
+  display inline!important
+
+.inline-block
+  display inline-block!important
+
 .padding.top
   padding-top INDENT!important
 
@@ -99,6 +116,21 @@ div[data-element="aside_background"]
 .margin.right
   margin-right INDENT!important
 
+.max-height
+  height 100%
+
+.max-line-height
+  line-height 100%
+
+.align-left
+  text-align left
+
+.align-center
+  text-align center
+
+.align-right
+  text-align right
+
 .scroll
 
   &.vertical
@@ -121,3 +153,11 @@ div[data-element="aside_background"]
   display block
   content ""
   clear both
+
+strong
+  font-weight bold
+  font-size 1.1em
+
+small
+  opacity 0.6
+  font-size 1.1em
