--- a/stylesheets/TaKo.lists.styl
+++ b/stylesheets/TaKo.lists.styl
@@ -21,6 +21,11 @@ article ul
     &:first-child
       border-top 1px solid rgba(0, 0, 0, 0.1)
 
+    & h1, h2, h3, h4, h5, h6, strong, small
+      overflow hidden
+      white-space nowrap
+      display block
+
   &.indented > li
     margin INDENT
 
