--- a/stylesheets/TaKo.base.styl
+++ b/stylesheets/TaKo.base.styl
@@ -13,6 +13,9 @@ body
 
   -webkit-backface-visibility hidden
 
+  & *
+    -webkit-tap-highlight-color rgba(0,0,0,0)
+
 aside
   display block
   width ASIDE_WIDTH
@@ -130,6 +133,9 @@ div[data-element="aside_background"]
 
 .align-right
   text-align right
+
+.align-justify
+  text-align justify
 
 .scroll
 
