radio and checkbox switch, midified circle and square styles

--- a/package/stylesheets/TaKo.css
+++ b/package/stylesheets/TaKo.css
@@ -1,4 +1,5 @@
-body{padding:0;margin:0;width:100%;height:100%;-webkit-touch-callout:none;-webkit-user-select:none;-khtml-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;oveflow:hidden;-webkit-backface-visibility:hidden}
+body{padding:0;margin:0;width:100%;height:100%;-webkit-touch-callout:none;-webkit-user-select:none;-khtml-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;oveflow:hidden;-webkit-backface-visibility:hidden;}
+body *{-webkit-tap-highlight-color:rgba(0,0,0,0)}
 aside{display:block;width:256px;padding:6px;z-index:201;position:fixed;top:50px;bottom:0;left:-276px;-webkit-transition-duration:150ms;-moz-transition-duration:150ms;-ms-transition-duration:150ms;-o-transition-duration:150ms;transition-duration:150ms;}
 aside.show{-webkit-transform:translateX(0);-moz-transform:translateX(0);-ms-transform:translateX(0);-o-transform:translateX(0);transform:translateX(0);left:0}
 aside .counter{margin-top:-3px;-webkit-border-radius:2px;-moz-border-radius:2px;-webkit-border-radius:2px;-moz-border-radius:2px;-ms-border-radius:2px;-o-border-radius:2px;border-radius:2px;padding:.2em .4em .2em .4em;float:right}
@@ -30,6 +31,7 @@ div[data-element="aside_background"].show{background-color:#000;opacity:.6;z-ind
 .align-left{text-align:left}
 .align-center{text-align:center}
 .align-right{text-align:right}
+.align-justify{text-align:justify}
 .scroll.vertical{overflow-y:scroll}
 .scroll.horizontal{overflow-x:scroll}
 .progress_bar{width:100%;height:10px;display:block;}
@@ -62,15 +64,23 @@ article ul > li{position:relative;background-color:#fff;border-bottom:1px solid 
 article ul > li.separator{background-color:rgba(0,0,0,0.1);color:#fff;padding:1px 10px 1px 10px}
 article ul > li:first-child{border-top:1px solid rgba(0,0,0,0.1)}
 article ul > li h1,article ul > li h2,article ul > li h3,article ul > li h4,article ul > li h5,article ul > li h6,article ul > li strong,article ul > li small{overflow:hidden;white-space:nowrap;display:block}
+article ul > li input[type="radio"].onright,article ul > li input[type="checkbox"].onright{margin-top:-.1em;}
+article ul > li input[type="radio"].onright.switch,article ul > li input[type="checkbox"].onright.switch{margin-top:-.3em}
 article ul.indented > li{margin:.8em}
 aside ul{list-style:none;width:100%;padding:0;margin-left:0;margin-right:0;}
 aside ul > li{position:relative;font-size:1.2em;padding:11px 10px 11px 10px;}
 aside ul > li.separator{background-color:rgba(0,0,0,0.1);color:#fff;padding:1px 10px 1px 10px}
 
 input{outline:none;-webkit-user-select:text;-khtml-user-select:text;-moz-user-select:text;-ms-user-select:text;user-select:text;}
-input[type="radio"].circle,input[type="checkbox"].circle,input[type="radio"].square,input[type="checkbox"].square{-webkit-appearance:none;cursor:pointer;border-width:3px;border-style:solid;width:20px;height:20px;-webkit-box-shadow:inset 0 2px 3px 0 rgba(0,0,0,0.1),0 1px 0 0 rgba(255,255,255,0.8);-moz-box-shadow:inset 0 2px 3px 0 rgba(0,0,0,0.1),0 1px 0 0 rgba(255,255,255,0.8);-ms-box-shadow:inset 0 2px 3px 0 rgba(0,0,0,0.1),0 1px 0 0 rgba(255,255,255,0.8);-o-box-shadow:inset 0 2px 3px 0 rgba(0,0,0,0.1),0 1px 0 0 rgba(255,255,255,0.8);box-shadow:inset 0 2px 3px 0 rgba(0,0,0,0.1),0 1px 0 0 rgba(255,255,255,0.8)}
-input[type="radio"].circle,input[type="checkbox"].circle{-webkit-border-radius:50%;-moz-border-radius:50%;-ms-border-radius:50%;-o-border-radius:50%;border-radius:50%}
-input[type="radio"].square,input[type="checkbox"].square{-webkit-border-radius:1px;-moz-border-radius:1px;-ms-border-radius:1px;-o-border-radius:1px;border-radius:1px}
+input[type="radio"]:not(.switch).circle,input[type="checkbox"]:not(.switch).circle,input[type="radio"]:not(.switch).square,input[type="checkbox"]:not(.switch).square{-webkit-appearance:none;cursor:pointer;border-width:1px;border-style:solid;width:20px;height:20px}
+input[type="radio"]:not(.switch).circle,input[type="checkbox"]:not(.switch).circle{-webkit-border-radius:50%;-moz-border-radius:50%;-ms-border-radius:50%;-o-border-radius:50%;border-radius:50%}
+input[type="radio"]:not(.switch).square,input[type="checkbox"]:not(.switch).square{-webkit-border-radius:1px;-moz-border-radius:1px;-ms-border-radius:1px;-o-border-radius:1px;border-radius:1px}
+input[type="radio"].switch,input[type="checkbox"].switch{appearance:none;-webkit-appearance:none;-webkit-user-select:text;cursor:pointer;height:24px;position:relative;-webkit-transition:border .25s .15s,box-shadow .25s .3s,padding .25s;-moz-transition:border .25s .15s,box-shadow .25s .3s,padding .25s;-ms-transition:border .25s .15s,box-shadow .25s .3s,padding .25s;-o-transition:border .25s .15s,box-shadow .25s .3s,padding .25s;transition:border .25s .15s,box-shadow .25s .3s,padding .25s;width:44px;vertical-align:top;}
+input[type="radio"].switch:after,input[type="checkbox"].switch:after{content:'';display:block;height:22px;width:22px;position:absolute;-webkit-transition:border .25s .15s,left .25s .1s,right .25s .25s;-moz-transition:border .25s .15s,left .25s .1s,right .25s .25s;-ms-transition:border .25s .15s,left .25s .1s,right .25s .25s;-o-transition:border .25s .15s,left .25s .1s,right .25s .25s;transition:border .25s .15s,left .25s .1s,right .25s .25s}
+input[type="radio"].switch:checked,input[type="checkbox"].switch:checked{padding-left:18px;-webkit-transition:border .25s,box-shadow .25s,padding .25s .15s;-moz-transition:border .25s,box-shadow .25s,padding .25s .15s;-ms-transition:border .25s,box-shadow .25s,padding .25s .15s;-o-transition:border .25s,box-shadow .25s,padding .25s .15s;transition:border .25s,box-shadow .25s,padding .25s .15s;}
+input[type="radio"].switch:checked:after,input[type="checkbox"].switch:checked:after{left:20px;-webkit-transition:border .25s,left .15s .25s,right .25s .25s;-moz-transition:border .25s,left .15s .25s,right .25s .25s;-ms-transition:border .25s,left .15s .25s,right .25s .25s;-o-transition:border .25s,left .15s .25s,right .25s .25s;transition:border .25s,left .15s .25s,right .25s .25s}
+input[type="radio"].switch.circle,input[type="checkbox"].switch.circle{-webkit-border-radius:20px;-moz-border-radius:20px;-ms-border-radius:20px;-o-border-radius:20px;border-radius:20px;}
+input[type="radio"].switch.circle:after,input[type="checkbox"].switch.circle:after{-webkit-border-radius:26px;-moz-border-radius:26px;-ms-border-radius:26px;-o-border-radius:26px;border-radius:26px}
 
 .line{width:100%;display:block;}
 .line:after{display:block;content:"";clear:both}
@@ -206,5 +216,8 @@ div[data-element="notification"] > div.window.error .icon{color:#ed1c13}
 #circular3dG > div{background-color:#f60}
 .progress_bar{background-color:#6d6d6d;}
 .progress_bar .percent{background-color:#f60}
-input[type="radio"].circle,input[type="checkbox"].circle,input[type="radio"].square,input[type="checkbox"].square{border-color:#8b8b8b;background-color:#dbdbdb}
-input[type="radio"][type="radio"]:checked,input[type="checkbox"][type="radio"]:checked,input[type="radio"][type="checkbox"]:checked,input[type="checkbox"][type="checkbox"]:checked{background-color:#ff944d}
+input[type="radio"].circle,input[type="checkbox"].circle,input[type="radio"].square,input[type="checkbox"].square{border-color:#adadad;background-color:#dbdbdb;-webkit-box-shadow:inset 0 0 8px #adadad;-moz-box-shadow:inset 0 0 8px #adadad;-ms-box-shadow:inset 0 0 8px #adadad;-o-box-shadow:inset 0 0 8px #adadad;box-shadow:inset 0 0 8px #adadad}
+input[type="radio"]:not(.switch):checked,input[type="checkbox"]:not(.switch):checked{background-color:#ff9c59}
+input[type="radio"].switch,input[type="checkbox"].switch{background-color:#e0e0e0;-webkit-box-shadow:inset 0 0 8px #adadad;-moz-box-shadow:inset 0 0 8px #adadad;-ms-box-shadow:inset 0 0 8px #adadad;-o-box-shadow:inset 0 0 8px #adadad;box-shadow:inset 0 0 8px #adadad;}
+input[type="radio"].switch:after,input[type="checkbox"].switch:after{background-color:#fff;border:1px solid #d0d0d0;-webkit-box-shadow:inset 0 0 8px #d9d9d9;-moz-box-shadow:inset 0 0 8px #d9d9d9;-ms-box-shadow:inset 0 0 8px #d9d9d9;-o-box-shadow:inset 0 0 8px #d9d9d9;box-shadow:inset 0 0 8px #d9d9d9}
+input[type="radio"].switch:checked,input[type="checkbox"].switch:checked{border-color:#ff944d;-webkit-box-shadow:inset 0 0 0 13px #ff944d;-moz-box-shadow:inset 0 0 0 13px #ff944d;-ms-box-shadow:inset 0 0 0 13px #ff944d;-o-box-shadow:inset 0 0 0 13px #ff944d;box-shadow:inset 0 0 0 13px #ff944d}
