--- a/stylesheets/TaKo.forms.styl
+++ b/stylesheets/TaKo.forms.styl
@@ -24,6 +24,8 @@ input
         border-radius(1px)
 
     &.switch
+      border-width 1px
+      border-style solid
       appearance none
       -webkit-appearance none
       -webkit-user-select text
@@ -45,6 +47,8 @@ input
         transition border .25s .15s,
                     left .25s .1s,
                     right .25s .25s
+        top -1px
+        left -1px
 
       &:checked
         padding-left 18px
@@ -53,7 +57,7 @@ input
                     padding .25s .15s
 
         &:after
-          left 20px
+          left 19px
           transition border .25s,
                       left .15s .25s,
                       right .25s .25s
