--- a/stylesheets/TaKo.theme.styl
+++ b/stylesheets/TaKo.theme.styl
@@ -134,7 +134,7 @@ div[data-element="notification"] > div.window
 
 
 input[type="radio"], input[type="checkbox"]
-  &.circle, &.square
+  &.circle, &.square, &.switch
     border-color darken(BACKGROUND, 25%)
     background-color darken(BACKGROUND, 5%)
     box-shadow inset 0 0 8px darken(BACKGROUND, 25%)
@@ -142,9 +142,8 @@ input[type="radio"], input[type="checkbox"]
   &:not(.switch)
     &:checked
       background-color lighten(THEME, 35%)
+      box-shadow inset 0 0 4px darken(BACKGROUND, 25%)
   &.switch
-    background-color darken(BACKGROUND, 3%)
-    box-shadow inset 0 0 8px darken(BACKGROUND, 25%)
     &:after
       background-color white
       border 1px solid darken(BACKGROUND, 10%)
