--- a/stylesheets/TaKo.forms.styl
+++ b/stylesheets/TaKo.forms.styl
@@ -31,36 +31,28 @@ input
       -webkit-user-select text
       cursor pointer
       height 24px
+      width 44px
       position relative
       transition border .25s .15s,
                   box-shadow .25s .3s,
                   padding .25s
-      width 44px
-      vertical-align top
 
       &:after
         content ''
         display block
         height 22px
         width 22px
+        transition border .25s .15s, left .25s .1s
         position absolute
-        transition border .25s .15s,
-                    left .25s .1s,
-                    right .25s .25s
         top -1px
         left -1px
 
       &:checked
-        padding-left 18px
-        transition border .25s,
-                    box-shadow .25s,
-                    padding .25s .15s
+        transition border .25s, box-shadow .25s
 
         &:after
           left 19px
-          transition border .25s,
-                      left .15s .25s,
-                      right .25s .25s
+          transition border .25s, left .15s .25s
 
       &.circle
         border-radius(20px)
