Improved aside performance

--- a/stylesheets/TaKo.base.styl
+++ b/stylesheets/TaKo.base.styl
@@ -28,8 +28,7 @@ aside
   transition-duration ASIDE_TRANSITION_TIME
 
   &.show
-    transform(translateX(0))
-    left 0
+    transform(translateX(ASIDE_WIDTH + ASIDE_PADDING * 2))
 
   & .counter
     margin-top -3px
