--- a/stylesheets/TaKo.forms.styl
+++ b/stylesheets/TaKo.forms.styl
@@ -32,26 +32,24 @@ input
       height 24px
       width 44px
       position relative
-      transition border .25s .15s,
-                  box-shadow .25s .3s,
-                  padding .25s
+      transition-duration .25s
 
       &:after
         content ''
         display block
         height 22px
         width 22px
-        transition border .25s .15s, left .25s .1s
+        transition-duration .25s
         position absolute
         top -1px
         left -1px
 
       &:checked
-        transition border .25s, box-shadow .25s
+        transition-duration .25s
 
         &:after
-          left 19px
-          transition border .25s, left .15s .25s
+          transform(translateX(20px))
+          transition-duration .25s
 
       &.circle
         border-radius(20px)
