--- a/stylesheets/TaKo.forms.styl
+++ b/stylesheets/TaKo.forms.styl
@@ -17,7 +17,7 @@ input
         height 20px
 
       &.circle
-        border-radius(50%)
+        border-radius(10px)
 
       &.square
         border-radius(1px)
