Aside background transition linear

--- a/stylesheets/TaKo.base.styl
+++ b/stylesheets/TaKo.base.styl
@@ -44,7 +44,7 @@ div[data-element="aside_background"]
   bottom 0
   left 0
   right 0
-  transition(background-color ASIDE_TRANSITION_TIME ease-out)
+  transition(background-color ASIDE_TRANSITION_TIME linear)
   z-index 0
   background-color rgba(0, 0, 0, 0)
 
