--- a/stylesheets/TaKo.forms.styl
+++ b/stylesheets/TaKo.forms.styl
@@ -17,10 +17,10 @@ input
         height 20px
 
       &.circle
-        border-radius(10px)
+        border-radius 10px
 
       &.square
-        border-radius(1px)
+        border-radius 1px
 
     &.switch
       border-width 1px
@@ -52,8 +52,8 @@ input
           transition-duration .25s
 
       &.circle
-        border-radius(20px)
+        border-radius 20px
 
         &:after
-          border-radius(26px)
+          border-radius 26px
 
