Added input type range

--- a/stylesheets/TaKo.forms.styl
+++ b/stylesheets/TaKo.forms.styl
@@ -57,3 +57,20 @@ input
         &:after
           border-radius 26px
 
+input[type="range"]
+  -webkit-appearance none
+  width 100%
+  height 7px
+  margin-top 10px
+  margin-bottom 10px
+  border-radius 3.5px
+  border-width 1px
+  border-style solid
+
+  &::-webkit-slider-thumb
+    -webkit-appearance none
+    background blue
+    height 26px
+    width 26px
+    border-radius 50%
+
