--- a/package/stylesheets/TaKo.css
+++ b/package/stylesheets/TaKo.css
@@ -3,7 +3,7 @@ body *{-webkit-tap-highlight-color:rgba(0,0,0,0)}
 aside{display:block;width:256px;padding:6px;z-index:201;position:absolute;top:0;bottom:0;left:-276px;-webkit-transition-duration:150ms;-moz-transition-duration:150ms;-ms-transition-duration:150ms;-o-transition-duration:150ms;transition-duration:150ms;}
 aside.show{-webkit-transform:translateX(268px);-moz-transform:translateX(268px);-ms-transform:translateX(268px);-o-transform:translateX(268px);transform:translateX(268px)}
 aside .counter{margin-top:-3px;-webkit-border-radius:2px;-moz-border-radius:2px;-webkit-border-radius:2px;-moz-border-radius:2px;-ms-border-radius:2px;-o-border-radius:2px;border-radius:2px;padding:.2em .4em .2em .4em;float:right}
-div[data-element="aside_background"]{position:fixed;top:50px;bottom:0;left:0;right:0;-webkit-transition:background-color 150ms linear;-moz-transition:background-color 150ms linear;-ms-transition:background-color 150ms linear;-o-transition:background-color 150ms linear;transition:background-color 150ms linear;z-index:0;background-color:rgba(0,0,0,0);}
+div[data-element="aside_background"]{position:fixed;top:50px;left:0;width:100%;height:100%;-webkit-transition:background-color 150ms linear;-moz-transition:background-color 150ms linear;-ms-transition:background-color 150ms linear;-o-transition:background-color 150ms linear;transition:background-color 150ms linear;z-index:0;background-color:rgba(0,0,0,0);}
 div[data-element="aside_background"].show{background-color:rgba(0,0,0,0.6);z-index:200}
 div[data-element="aside_background"].hide{background-color:rgba(0,0,0,0)}
 .indented > div{padding:.8em}
@@ -82,6 +82,8 @@ input[type="radio"].switch:checked,input[type="checkbox"].switch:checked{-webkit
 input[type="radio"].switch:checked:after,input[type="checkbox"].switch:checked:after{-webkit-transform:translateX(20px);-moz-transform:translateX(20px);-ms-transform:translateX(20px);-o-transform:translateX(20px);transform:translateX(20px);-webkit-transition-duration:.25s;-moz-transition-duration:.25s;-ms-transition-duration:.25s;-o-transition-duration:.25s;transition-duration:.25s}
 input[type="radio"].switch.circle,input[type="checkbox"].switch.circle{-webkit-border-radius:20px;-moz-border-radius:20px;-ms-border-radius:20px;-o-border-radius:20px;border-radius:20px;}
 input[type="radio"].switch.circle:after,input[type="checkbox"].switch.circle:after{-webkit-border-radius:26px;-moz-border-radius:26px;-ms-border-radius:26px;-o-border-radius:26px;border-radius:26px}
+input[type="range"]{-webkit-appearance:none;width:100%;height:7px;margin-top:10px;margin-bottom:10px;-webkit-border-radius:3.5px;-moz-border-radius:3.5px;-ms-border-radius:3.5px;-o-border-radius:3.5px;border-radius:3.5px;border-width:1px;border-style:solid;}
+input[type="range"]::-webkit-slider-thumb{-webkit-appearance:none;background:#00f;height:26px;width:26px;-webkit-border-radius:50%;-moz-border-radius:50%;-ms-border-radius:50%;-o-border-radius:50%;border-radius:50%}
 
 .line{width:100%;display:block;}
 .line:after{display:block;content:"";clear:both}
@@ -221,3 +223,6 @@ input[type="radio"].circle,input[type="checkbox"].circle,input[type="radio"].squ
 input[type="radio"]:not(.switch):checked,input[type="checkbox"]:not(.switch):checked{background-color:#ff9c59;-webkit-box-shadow:inset 0 0 4px #adadad;-moz-box-shadow:inset 0 0 4px #adadad;-ms-box-shadow:inset 0 0 4px #adadad;-o-box-shadow:inset 0 0 4px #adadad;box-shadow:inset 0 0 4px #adadad}
 input[type="radio"].switch:after,input[type="checkbox"].switch:after{background-color:#fff;border:1px solid #d0d0d0;-webkit-box-shadow:inset 0 0 8px #d9d9d9;-moz-box-shadow:inset 0 0 8px #d9d9d9;-ms-box-shadow:inset 0 0 8px #d9d9d9;-o-box-shadow:inset 0 0 8px #d9d9d9;box-shadow:inset 0 0 8px #d9d9d9}
 input[type="radio"].switch:checked,input[type="checkbox"].switch:checked{border-color:#ff944d;-webkit-box-shadow:inset 0 0 0 13px #ff944d;-moz-box-shadow:inset 0 0 0 13px #ff944d;-ms-box-shadow:inset 0 0 0 13px #ff944d;-o-box-shadow:inset 0 0 0 13px #ff944d;box-shadow:inset 0 0 0 13px #ff944d}
+input[type="range"]{background-color:#e0e0e0;border-color:#b9b9b9;}
+input[type="range"]:active{background-color:#ff944d}
+input[type="range"]::-webkit-slider-thumb{background-color:#fff;border:1px solid #d0d0d0;-webkit-box-shadow:inset 0 0 10px #d9d9d9;-moz-box-shadow:inset 0 0 10px #d9d9d9;-ms-box-shadow:inset 0 0 10px #d9d9d9;-o-box-shadow:inset 0 0 10px #d9d9d9;box-shadow:inset 0 0 10px #d9d9d9}
