--- a/stylesheets/TaKo.base.styl
+++ b/stylesheets/TaKo.base.styl
@@ -41,9 +41,11 @@ aside
 div[data-element="aside_background"]
   position fixed
   top HEADER_HEIGHT
-  bottom 0
+  // bottom 0
   left 0
-  right 0
+  // right 0
+  width 100%
+  height 100%
   transition(background-color ASIDE_TRANSITION_TIME linear)
   z-index 0
   background-color rgba(0, 0, 0, 0)
