--- a/stylesheets/TaKo.theme.styl
+++ b/stylesheets/TaKo.theme.styl
@@ -153,5 +153,17 @@ input[type="radio"], input[type="checkbox"]
       border-color lighten(THEME, 30%)
       box-shadow inset 0 0 0 13px lighten(THEME, 30%)
 
+input[type="range"]
+  background-color darken(BACKGROUND, 3%)
+  border-color darken(BACKGROUND, 20%)
+
+  &:active
+    background-color lighten(THEME, 30%)
+
+  &::-webkit-slider-thumb
+    background-color white
+    border 1px solid darken(BACKGROUND, 10%)
+    box-shadow inset 0 0 10px darken(BACKGROUND, 6%)
+
 
 
