--- a/package/stylesheets/TaKo.css
+++ b/package/stylesheets/TaKo.css
@@ -82,8 +82,10 @@ input[type="radio"].switch:checked,input[type="checkbox"].switch:checked{-webkit
 input[type="radio"].switch:checked:after,input[type="checkbox"].switch:checked:after{-webkit-transform:translateX(20px);-moz-transform:translateX(20px);-ms-transform:translateX(20px);-o-transform:translateX(20px);transform:translateX(20px);-webkit-transition-duration:.25s;-moz-transition-duration:.25s;-ms-transition-duration:.25s;-o-transition-duration:.25s;transition-duration:.25s}
 input[type="radio"].switch.circle,input[type="checkbox"].switch.circle{-webkit-border-radius:20px;-moz-border-radius:20px;-ms-border-radius:20px;-o-border-radius:20px;border-radius:20px;}
 input[type="radio"].switch.circle:after,input[type="checkbox"].switch.circle:after{-webkit-border-radius:26px;-moz-border-radius:26px;-ms-border-radius:26px;-o-border-radius:26px;border-radius:26px}
-input[type="range"]{-webkit-appearance:none;width:100%;height:7px;margin-top:10px;margin-bottom:10px;-webkit-border-radius:3.5px;-moz-border-radius:3.5px;-ms-border-radius:3.5px;-o-border-radius:3.5px;border-radius:3.5px;border-width:1px;border-style:solid;}
-input[type="range"]::-webkit-slider-thumb{-webkit-appearance:none;background:#00f;height:26px;width:26px;-webkit-border-radius:50%;-moz-border-radius:50%;-ms-border-radius:50%;-o-border-radius:50%;border-radius:50%}
+input[type="range"]{-webkit-user-select:none;-khtml-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;-webkit-appearance:none;width:100%;height:7px;margin-top:10px;margin-bottom:10px;-webkit-border-radius:3.5px;-moz-border-radius:3.5px;-ms-border-radius:3.5px;-o-border-radius:3.5px;border-radius:3.5px;border-width:1px;border-style:solid;margin-left:0;}
+input[type="range"]::-moz-range-track{width:100%;height:7px;margin-top:10px;margin-bottom:10px;-webkit-border-radius:3.5px;-moz-border-radius:3.5px;-ms-border-radius:3.5px;-o-border-radius:3.5px;border-radius:3.5px;border-width:1px;border-style:solid}
+input[type="range"]::-webkit-slider-thumb{-webkit-appearance:none;height:26px;width:26px;-webkit-border-radius:50%;-moz-border-radius:50%;-ms-border-radius:50%;-o-border-radius:50%;border-radius:50%}
+input[type="range"]::-moz-range-thumb{height:26px;width:26px;-webkit-border-radius:50%;-moz-border-radius:50%;-ms-border-radius:50%;-o-border-radius:50%;border-radius:50%}
 
 .line{width:100%;display:block;}
 .line:after{display:block;content:"";clear:both}
@@ -224,5 +226,7 @@ input[type="radio"]:not(.switch):checked,input[type="checkbox"]:not(.switch):che
 input[type="radio"].switch:after,input[type="checkbox"].switch:after{background-color:#fff;border:1px solid #d0d0d0;-webkit-box-shadow:inset 0 0 8px #d9d9d9;-moz-box-shadow:inset 0 0 8px #d9d9d9;-ms-box-shadow:inset 0 0 8px #d9d9d9;-o-box-shadow:inset 0 0 8px #d9d9d9;box-shadow:inset 0 0 8px #d9d9d9}
 input[type="radio"].switch:checked,input[type="checkbox"].switch:checked{border-color:#ff944d;-webkit-box-shadow:inset 0 0 0 13px #ff944d;-moz-box-shadow:inset 0 0 0 13px #ff944d;-ms-box-shadow:inset 0 0 0 13px #ff944d;-o-box-shadow:inset 0 0 0 13px #ff944d;box-shadow:inset 0 0 0 13px #ff944d}
 input[type="range"]{background-color:#e0e0e0;border-color:#b9b9b9;}
+input[type="range"]::-moz-range-track{background-color:#e0e0e0;border-color:#b9b9b9;}
+input[type="range"]::-moz-range-track:active{background-color:#ff944d}
 input[type="range"]:active{background-color:#ff944d}
 input[type="range"]::-webkit-slider-thumb{background-color:#fff;border:1px solid #d0d0d0;-webkit-box-shadow:inset 0 0 10px #d9d9d9;-moz-box-shadow:inset 0 0 10px #d9d9d9;-ms-box-shadow:inset 0 0 10px #d9d9d9;-o-box-shadow:inset 0 0 10px #d9d9d9;box-shadow:inset 0 0 10px #d9d9d9}
