--- a/stylesheets/TaKo.forms.styl
+++ b/stylesheets/TaKo.forms.styl
@@ -58,6 +58,11 @@ input
           border-radius 26px
 
 input[type="range"]
+  -webkit-user-select none
+  -khtml-user-select none
+  -moz-user-select none
+  -ms-user-select none
+  user-select none
   -webkit-appearance none
   width 100%
   height 7px
@@ -66,10 +71,24 @@ input[type="range"]
   border-radius 3.5px
   border-width 1px
   border-style solid
+  margin-left 0
+
+  &::-moz-range-track
+    width 100%
+    height 7px
+    margin-top 10px
+    margin-bottom 10px
+    border-radius 3.5px
+    border-width 1px
+    border-style solid
 
   &::-webkit-slider-thumb
     -webkit-appearance none
-    background blue
+    height 26px
+    width 26px
+    border-radius 50%
+
+  &::-moz-range-thumb
     height 26px
     width 26px
     border-radius 50%
