Changes in forms styles

--- a/stylesheets/TaKo.forms.styl
+++ b/stylesheets/TaKo.forms.styl
@@ -10,6 +10,7 @@ input
     &:not(.switch)
       &.circle, &.square
         -webkit-appearance none
+        -moz-appearance none
         cursor pointer
         border-width 1px
         border-style solid
@@ -27,7 +28,7 @@ input
       border-style solid
       appearance none
       -webkit-appearance none
-      -webkit-user-select text
+      -moz-appearance none
       cursor pointer
       height 24px
       width 44px
