--- a/package/stylesheets/TaKo.css
+++ b/package/stylesheets/TaKo.css
@@ -73,10 +73,10 @@ aside ul > li{position:relative;font-size:1.2em;padding:11px 10px 11px 10px;}
 aside ul > li.separator{background-color:rgba(0,0,0,0.1);color:#fff;padding:1px 10px 1px 10px}
 
 input{outline:none;-webkit-user-select:text;-khtml-user-select:text;-moz-user-select:text;-ms-user-select:text;user-select:text;}
-input[type="radio"]:not(.switch).circle,input[type="checkbox"]:not(.switch).circle,input[type="radio"]:not(.switch).square,input[type="checkbox"]:not(.switch).square{-webkit-appearance:none;cursor:pointer;border-width:1px;border-style:solid;width:20px;height:20px}
+input[type="radio"]:not(.switch).circle,input[type="checkbox"]:not(.switch).circle,input[type="radio"]:not(.switch).square,input[type="checkbox"]:not(.switch).square{-webkit-appearance:none;-moz-appearance:none;cursor:pointer;border-width:1px;border-style:solid;width:20px;height:20px}
 input[type="radio"]:not(.switch).circle,input[type="checkbox"]:not(.switch).circle{-webkit-border-radius:10px;-moz-border-radius:10px;-ms-border-radius:10px;-o-border-radius:10px;border-radius:10px}
 input[type="radio"]:not(.switch).square,input[type="checkbox"]:not(.switch).square{-webkit-border-radius:1px;-moz-border-radius:1px;-ms-border-radius:1px;-o-border-radius:1px;border-radius:1px}
-input[type="radio"].switch,input[type="checkbox"].switch{border-width:1px;border-style:solid;appearance:none;-webkit-appearance:none;-webkit-user-select:text;cursor:pointer;height:24px;width:44px;position:relative;-webkit-transition-duration:.25s;-moz-transition-duration:.25s;-ms-transition-duration:.25s;-o-transition-duration:.25s;transition-duration:.25s;}
+input[type="radio"].switch,input[type="checkbox"].switch{border-width:1px;border-style:solid;appearance:none;-webkit-appearance:none;-moz-appearance:none;cursor:pointer;height:24px;width:44px;position:relative;-webkit-transition-duration:.25s;-moz-transition-duration:.25s;-ms-transition-duration:.25s;-o-transition-duration:.25s;transition-duration:.25s;}
 input[type="radio"].switch:after,input[type="checkbox"].switch:after{content:'';display:block;height:22px;width:22px;-webkit-transition-duration:.25s;-moz-transition-duration:.25s;-ms-transition-duration:.25s;-o-transition-duration:.25s;transition-duration:.25s;position:absolute;top:-1px;left:-1px}
 input[type="radio"].switch:checked,input[type="checkbox"].switch:checked{-webkit-transition-duration:.25s;-moz-transition-duration:.25s;-ms-transition-duration:.25s;-o-transition-duration:.25s;transition-duration:.25s;}
 input[type="radio"].switch:checked:after,input[type="checkbox"].switch:checked:after{-webkit-transform:translateX(20px);-moz-transform:translateX(20px);-ms-transform:translateX(20px);-o-transform:translateX(20px);transform:translateX(20px);-webkit-transition-duration:.25s;-moz-transition-duration:.25s;-ms-transition-duration:.25s;-o-transition-duration:.25s;transition-duration:.25s}
@@ -222,11 +222,10 @@ div[data-element="notification"] > div.window.error .icon{color:#ed1c13}
 .progress_bar{background-color:#6d6d6d;}
 .progress_bar .percent{background-color:#f60}
 input[type="radio"].circle,input[type="checkbox"].circle,input[type="radio"].square,input[type="checkbox"].square,input[type="radio"].switch,input[type="checkbox"].switch{border-color:#adadad;background-color:#dbdbdb;-webkit-box-shadow:inset 0 0 8px #adadad;-moz-box-shadow:inset 0 0 8px #adadad;-ms-box-shadow:inset 0 0 8px #adadad;-o-box-shadow:inset 0 0 8px #adadad;box-shadow:inset 0 0 8px #adadad}
-input[type="radio"]:not(.switch):checked,input[type="checkbox"]:not(.switch):checked{background-color:#ff9c59;-webkit-box-shadow:inset 0 0 4px #adadad;-moz-box-shadow:inset 0 0 4px #adadad;-ms-box-shadow:inset 0 0 4px #adadad;-o-box-shadow:inset 0 0 4px #adadad;box-shadow:inset 0 0 4px #adadad}
+input[type="radio"]:not(.switch):checked,input[type="checkbox"]:not(.switch):checked{background-color:#ff9c59;color:#ff9c59;-webkit-box-shadow:inset 0 0 0 13px #ff944d;-moz-box-shadow:inset 0 0 0 13px #ff944d;-ms-box-shadow:inset 0 0 0 13px #ff944d;-o-box-shadow:inset 0 0 0 13px #ff944d;box-shadow:inset 0 0 0 13px #ff944d}
 input[type="radio"].switch:after,input[type="checkbox"].switch:after{background-color:#fff;border:1px solid #d0d0d0;-webkit-box-shadow:inset 0 0 8px #d9d9d9;-moz-box-shadow:inset 0 0 8px #d9d9d9;-ms-box-shadow:inset 0 0 8px #d9d9d9;-o-box-shadow:inset 0 0 8px #d9d9d9;box-shadow:inset 0 0 8px #d9d9d9}
 input[type="radio"].switch:checked,input[type="checkbox"].switch:checked{border-color:#ff944d;-webkit-box-shadow:inset 0 0 0 13px #ff944d;-moz-box-shadow:inset 0 0 0 13px #ff944d;-ms-box-shadow:inset 0 0 0 13px #ff944d;-o-box-shadow:inset 0 0 0 13px #ff944d;box-shadow:inset 0 0 0 13px #ff944d}
 input[type="range"]{background-color:#e0e0e0;border-color:#b9b9b9;}
-input[type="range"]::-moz-range-track{background-color:#e0e0e0;border-color:#b9b9b9;}
-input[type="range"]::-moz-range-track:active{background-color:#ff944d}
+input[type="range"]::-moz-range-track{background-color:#e0e0e0;border-color:#b9b9b9}
 input[type="range"]:active{background-color:#ff944d}
 input[type="range"]::-webkit-slider-thumb{background-color:#fff;border:1px solid #d0d0d0;-webkit-box-shadow:inset 0 0 10px #d9d9d9;-moz-box-shadow:inset 0 0 10px #d9d9d9;-ms-box-shadow:inset 0 0 10px #d9d9d9;-o-box-shadow:inset 0 0 10px #d9d9d9;box-shadow:inset 0 0 10px #d9d9d9}
