--- a/stylesheets/TaKo.theme.styl
+++ b/stylesheets/TaKo.theme.styl
@@ -142,7 +142,9 @@ input[type="radio"], input[type="checkbox"]
   &:not(.switch)
     &:checked
       background-color lighten(THEME, 35%)
-      box-shadow inset 0 0 4px darken(BACKGROUND, 25%)
+      color lighten(THEME, 35%)
+      box-shadow inset 0 0 0 13px lighten(THEME, 30%)
+
   &.switch
     &:after
       background-color white
@@ -160,9 +162,6 @@ input[type="range"]
   &::-moz-range-track
     background-color darken(BACKGROUND, 3%)
     border-color darken(BACKGROUND, 20%)
-
-    &:active
-      background-color lighten(THEME, 30%)
 
   &:active
     background-color lighten(THEME, 30%)
